--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "LeafGuard/wsgi.py",
+      "src": "manage.py",
       "use": "@vercel/python",
       "config": {
         "runtime": "python3.10",
@@ -12,7 +12,6 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "LeafGuard/wsgi.py" }
+    { "src": "/(.*)", "dest": "manage.py" }
   ]
 }
-
