--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==5.1.6
 djangorestframework==3.15.2
 numpy==2.2.3
-opencv-python-headless==4.11.0.86  # ⬅️ Replace this
-tensorflow==2.11.0
+opencv-python-headless==4.11.0.86
+tensorflow==2.10.1
